# interscale

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yaml  release.yaml  test.yaml
ISSUE_TEMPLATE/: feature_request.yml
config_files/: legnini_example.yaml  test.yaml
docs/: api.md  conf.py  contributing.md  index.md  installation.md  overview.md  references.bib  references.md
docs/api/: index.md  model.md  plotting.md  tools.md
docs/notebooks/: 0_setup_legnini.ipynb  1_model_training.ipynb  2_gene_level_evaluation.ipynb  2_gene_level_evaluation_new.ipynb  index.md
resources/interscale/: Dockerfile  test_interscale.py
src/InterScale/: __init__.py  _paths.py  geome_dataloader.py  main.py  main_sweep.py
src/InterScale/config/: __init__.py  dataset_config.py  global_component_config.py  local_component_config.py  model_config.py  optim_config.py  wandb_config.py
src/InterScale/config/.ipynb_checkpoints/: model_config-checkpoint.py
src/InterScale/evaluation/: __init__.py  _gene_loadings.py  _gene_set_covariance.py  _latent_analysis.py  clustering.py  gene_rank_analysis.py  graph_classification.py  net_streams.py
src/InterScale/model/: CombinedModel.py  GlobalModel.py  LocalModel.py  __init__.py
src/InterScale/model/.ipynb_checkpoints/: CombinedModel-checkpoint.py  LocalModel-checkpoint.py
src/InterScale/model/base/: _base_model.py
src/InterScale/model/base/.ipynb_checkpoints/: _base_model-checkpoint.py
src/InterScale/module/: __init__.py
src/InterScale/module/base/: __init__.py  _base_global_module.py  _base_local_module.py  _base_module.py
src/InterScale/module/combined_module/: __init__.py  combined_module.py  dual_decoder_combined_module.py
src/InterScale/module/global_modules/: __init__.py  transformer_encoder.py  transformer_encoder_layer.py  transformer_utils.py
src/InterScale/module/global_modules/.ipynb_checkpoints/: transformer_encoder-checkpoint.py
src/InterScale/module/local_modules/: GCN.py  GIN.py  Precomputed.py  SCVI.py  __init__.py
src/InterScale/nn/: __init__.py  _base_components.py
src/InterScale/pp/: __init__.py  basic.py  segmentation_noise.py  spatial_data.py
src/InterScale/tl/: __init__.py  _preprocessing.py  clustering.py  geome_utils.py  masking.py  padding.py  patient_split.py  scheduler.py  self_attn_relevance.py  utils.py
src/InterScale/train/: __init__.py  _training.py  _trainingplans.py  _trainingplans_new.py  _utils.py  losses.py
src/InterScale/train/.ipynb_checkpoints/: _trainingplans-checkpoint.py
src/config_files/: InterScale_example.yaml  config_read_me.md
src/config_files/.ipynb_checkpoints/: he23_lung-checkpoint.yaml  test-checkpoint.yaml
src/interscale/: __init__.py  _paths.py  geome_dataloader.py  main.py  main_sweep.py
src/interscale/config/: __init__.py  dataset_config.py  global_component_config.py  local_component_config.py  model_config.py  optim_config.py  wandb_config.py
src/interscale/datasets/: __init__.py  _legnini.py
src/interscale/evaluation/: __init__.py  _gene_loadings.py  _gene_rank_analysis.py  _gene_set_covariance.py  _latent_analysis.py  graph_classification.py  net_streams.py
src/interscale/model/: __init__.py  combined_model.py  global_model.py  local_model.py
src/interscale/model/base/: _base_model.py
src/interscale/module/: __init__.py
src/interscale/module/base/: __init__.py  _base_global_module.py  _base_local_module.py  _base_module.py
src/interscale/module/combined_module/: __init__.py  combined_module.py  dual_decoder_combined_module.py
src/interscale/module/global_modules/: __init__.py  transformer_encoder.py  transformer_encoder_layer.py  transformer_utils.py
src/interscale/module/local_modules/: GCN.py  GIN.py  Precomputed.py  SCVI.py  __init__.py
src/interscale/nn/: __init__.py  _decoder.py
src/interscale/nn/utils/: scheduler.py
src/interscale/pl/: __init__.py  config.py  gene_level_plots.py
src/interscale/pp/: __init__.py  basic.py  segmentation_noise.py  spatial_data.py
src/interscale/tl/: __init__.py  _preprocessing.py  clustering.py  geome_utils.py  masking.py  padding.py  self_attn_relevance.py  utils.py
src/interscale/train/: __init__.py  _training.py  _trainingplans.py  _utils.py  losses.py
tests/: test_package.py
