[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "interscale"
version = "0.0.1"
description = "Multi-scale cell interaction model for spatial transcriptomics data."
readme = "README.md"
license = "BSD-3-Clause"
maintainers = [
  { name = "Francesca Drummer", email = "Francesca.Drummer@helmholtz-munich.de" },
]
authors = [
  { name = "Francesca Drummer" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "anndata",
  "fast-array-utils[accel]",
  "geome",
  "lightning>=2",
  "numpy>=1.19",
  "pandas",
  "scanpy",
  "scikit-learn",
  "scipy>=1.7",
  "scvi-tools>=0.19",
  # for debug logging (referenced from the issue template)
  "session-info2",
  "squidpy>=1.7",
  "torch>=2",
  "torch-geometric>=2",
  "torchmetrics>=1.8",
  "wandb",
  "yacs"
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://icb-interscale.readthedocs.io/"
urls.Homepage = "https://github.com/theislab/interscale"
urls.Source = "https://github.com/theislab/interscale"

[dependency-groups]
dev = [
  "pre-commit",
  "twine>=4.0.2",
]
test = [
  "coverage>=7.10",
  "pytest",
  "pytest-cov",     # For VS Code’s coverage functionality
]
doc = [
  "ipykernel",
  "ipython",
  "myst-nb>=1.1",
  "pandas",
  "sphinx>=8.1",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinxcontrib-bibtex>=1",
  "sphinxcontrib-katex",
  "sphinxext-opengraph",
]

[tool.hatch]
envs.default.installer = "uv"
envs.default.dependency-groups = [ "dev" ]
envs.docs.dependency-groups = [ "doc" ]
envs.docs.scripts.build = "sphinx-build -M html docs docs/_build -W {args}"
envs.docs.scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
envs.docs.scripts.clean = "git clean -fdX -- {args:docs}"
envs.hatch-test.dependency-groups = [ "dev", "test" ]
envs.hatch-test.matrix = [
  # Test the lowest and highest supported Python versions with normal deps
  { deps = [ "stable" ], python = [ "3.11", "3.14" ] },
  # Test the newest supported Python version also with pre-release deps
  { deps = [ "pre" ], python = [ "3.14" ] },
]
# If the matrix variable `deps` is set to "pre",
# set the environment variable `UV_PRERELEASE` to "allow".
envs.hatch-test.overrides.matrix.deps.env-vars = [
  { key = "UV_PRERELEASE", value = "allow", if = [ "pre" ] },
]

[tool.uv]
extra-build-dependencies.torch-cluster = [ "torch" ]
extra-build-dependencies.torch-scatter = [ "torch" ]
extra-build-dependencies.torch-sparse = [ "torch" ]

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]
format.docstring-code-format = true
lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  "B006",  # Allow list defaults in legacy APIs
  "B007",  # Allow unused loop variables in legacy code
  "B008",  # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "B011",  # Allow assert False patterns in existing code
  "B026",  # Allow star args after keyword args in compatibility wrappers
  "B905",  # Do not enforce zip(strict=...) in existing loops
  "C408",  # Allow list()/dict() explicit constructors
  "D100",  # Missing docstring in public module
  "D101",  # Missing docstring in public class
  "D102",  # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104",  # Missing docstring in public package
  "D105",  # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107",  # Missing docstring in __init__
  "D200",  # One-line docstrings are allowed on multiple lines
  # Disable one in each pair of mutually incompatible rules
  "D203",  # We don’t want a blank line before a class docstring
  "D205",  # 1 blank line between summary and description is optional
  "D213",  # <> We want docstrings to start immediately after the opening triple quote
  "D400",  # first line should end with a period [Bug: doesn’t work with single-line docstrings]
  "D401",  # First line should be in imperative mood; try rephrasing
  "D404",  # Allow "This" as first word in docstrings
  "D419",  # Allow empty placeholder docstrings
  "E402",  # Allow imports after module-level setup in legacy modules
  "E501",  # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E711",  # Allow == None comparisons in legacy branches
  "E731",  # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E741",  # allow I, O, l as variable names -> I is the identity matrix
  "F841",  # Allow assigned-but-unused variables in exploratory code
  "UP031", # Allow percent-format in existing error strings
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest]
strict = true
testpaths = [ "tests" ]
addopts = [
  "--import-mode=importlib", # allow using test files with same name
]

[tool.coverage]
run.omit = [
  "**/test_*.py",
]
run.patch = [ "subprocess" ]
run.source = [ "interscale" ]

[tool.cruft]
skip = [
  ".git",
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]
